[package]
name = "polysig-server"
version = "0.8.0"
edition = "2021"
description = "Relay and meeting room servers for the polysig library"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "AGPL-3.0"
repository = "https://github.com/polysig/polysig"
default-run = "polysig-relay"

[dependencies]
polysig-protocol.workspace = true
polysig-meeting-server.workspace = true
polysig-relay-server.workspace = true
polysig-driver.workspace = true
k256 = { workspace = true, features = ["ecdsa", "schnorr"] }
ed25519-dalek.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tokio.workspace = true
axum-server.workspace = true
rand.workspace = true
serde_json.workspace = true

[[bin]]
path = "src/relay_server.rs"
name = "polysig-relay"

[[bin]]
path = "src/meeting_server.rs"
name = "polysig-meeting"

[[bin]]
path = "src/keygen.rs"
name = "polysig-keygen"
