[package]
name = "polysig-driver"
version = "0.8.0"
edition = "2021"
description = "Signers and drivers for multisig threshold protocols"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0 OR AGPL-3.0"
repository = "https://github.com/polysig/polysig"

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
cggmp = ["k256", "synedrion", "bip32"]
ecdsa = ["k256/ecdsa"]
eddsa = ["ed25519", "ed25519-dalek"]
frost-ed25519 = ["frost", "dep:frost-ed25519", "ed25519-dalek"]
frost = ["frost-core"]
schnorr = ["ed25519", "k256/schnorr"]

[dependencies]
polysig-protocol.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
frost-core = { workspace = true, optional = true }
frost-ed25519 = { workspace = true, optional = true }
synedrion = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }
sha3.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
bip32 = { workspace = true, optional = true }
rand.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true

[build-dependencies]
rustc_version = "0.4.1"

[package.metadata.docs.rs]
all-features = true
