[package]
name = "polysig"
version = "0.8.0"
edition = "2021"
description = "Polysig is a library for single-party and multisig use cases for ECDSA, Schnorr and Ed25519 signature schemes"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/polysig/polysig"

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = [
  "cggmp",
  "frost-ed25519",
  "frost-secp256k1-tr",
]
cggmp = [
  "polysig-client/cggmp",
  "polysig-driver/cggmp",
]
frost-ed25519 = [
  "polysig-client/frost-ed25519",
  "polysig-driver/frost-ed25519",
]
frost-secp256k1-tr = [
  "polysig-client/frost-secp256k1-tr",
  "polysig-driver/frost-secp256k1-tr",
]
ecdsa = ["polysig-driver/ecdsa"]
eddsa = ["polysig-driver/eddsa"]
schnorr = ["polysig-driver/schnorr"]

[dependencies]
polysig-client.workspace = true
polysig-driver.workspace = true
polysig-protocol.workspace = true
polysig-meeting-server.workspace = true
polysig-relay-server.workspace = true
