[package]
name = "polysig-protocol"
version = "0.7.1"
edition = "2021"
description = "Multi-party computation framework using the noise protocol for end-to-end encryption"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/polysig/polysig"

[features]
zlib = ["dep:flate2"]

[dependencies]
thiserror.workspace = true
snow.workspace = true
async-trait.workspace = true
futures.workspace = true
pem.workspace = true
http.workspace = true
log.workspace = true
binary-stream.workspace = true
uuid.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2 = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
