[package]
name = "polysig-node-bindings"
version = "0.8.0"
edition = "2021"
description = "Nodejs bindings for the polysig library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/polysig/polysig"

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
cggmp = [
  "polysig-client/cggmp",
  "polysig-driver/cggmp",
  "dep:tokio",
  "napi/async",
  "napi/tokio",
  "napi/tokio_rt",
  "serde"
]
ecdsa = ["polysig-driver/ecdsa"]
eddsa = ["polysig-driver/eddsa"]
frost-ed25519 = [
  "polysig-driver/frost-ed25519",
  "polysig-client/frost-ed25519",
  "dep:tokio",
  "napi/async",
  "napi/tokio",
  "napi/tokio_rt",
  "serde"
]
schnorr = ["polysig-driver/schnorr"]

[lib]
crate-type = ["cdylib"]

[dependencies]
polysig-client.workspace = true
polysig-driver.workspace = true
polysig-protocol.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
napi = { version = "3.0.0-alpha.16", features = ["anyhow", "serde-json", "napi9"]}
napi-derive = "3.0.0-alpha.15"

[build-dependencies]
napi-build = "1"
