[package]
name = "polysig-webassembly-bindings"
version = "0.8.0"
edition = "2021"
description = "Webassembly bindings for the polysig library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/polysig/polysig"

[features]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519", "frost-secp256k1-tr"]
cggmp = ["polysig-driver/cggmp"]
ecdsa = ["polysig-driver/ecdsa"]
eddsa = ["polysig-driver/eddsa"]
frost-ed25519 = ["polysig-driver/frost-ed25519"]
frost-secp256k1-tr = ["polysig-driver/frost-secp256k1-tr"]
schnorr = ["polysig-driver/schnorr"]

tracing = [
  "dep:tracing",
  "dep:tracing-subscriber", 
  "dep:tracing-subscriber-wasm"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
polysig-client.workspace = true
polysig-driver.workspace = true
polysig-protocol.workspace = true
rand.workspace = true
log.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true
wasm-bindgen.workspace = true
tracing-subscriber-wasm = { workspace = true, optional = true }

[build-dependencies]
rustc_version = "0.4.1"
