[package]
name = "webassembly-cggmp-template"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
polysig-protocol = { path = "../../../../crates/protocol" }
k256 = { version = "0.14.0-pre.2", default-features = false, features = ["serde", "pem", "ecdsa", "std"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
serde_json = "1"

[[bin]]
name = "generate-template"
path = "src/generate.rs"
